# NRE

./: .gitmodules  README.md
nre/: CMakeLists.txt  SConstruct  b
nre/apps/: CMakeLists.txt
nre/guests/: CMakeLists.txt
nre/include/arch/: UtcbExcLayout.h
nre/include/util/: DmarTableParser.h
nre/libs/: CMakeLists.txt
nre/libs/libc/: gcc14-compat.c
nre/services/: CMakeLists.txt  SConscript
nre/tools/: CMakeLists.txt
